# crypto-rust

./: .travis.yml  Cargo.toml  appveyor.yml
.github/workflows/: release.yml  rust.yml
ci/: before_deploy.sh
src/: checker.rs  commands.rs  config.rs  fetcher.rs  lib.rs  main.rs  utils.rs
src/fetcher/: cmc_requests.rs  cmc_structs.rs
