[package]
name = "crypto-rust"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.9"
serde = { version = "1.0.135", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
regex = "1"
thiserror = "1"

