[package]
name = "crypto-rust"
version = "0.2.0"
authors = ["Loïs L. <loislag@outlook.fr>"]
description = "A simple rust CLI application to print datas about cryptocurrency stuff"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SailorSnoW/crypto-rust"
keywords = ["cli", "cryptocurrency", "data"]
categories = ["command-line-utilities"]
edition = "2021"

[lib]
path="src/lib.rs"

[dependencies]
reqwest = "0.11.9"
serde = { version = "1.0.135", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }
regex = "1"
thiserror = "1"
human-panic = "1"
clap = { version = "3.0.13", features = ["derive"] }

